feat: Add add-to-wishlist-functionality with ajax. Adding feature to add product to the wishlist using AJAX to avoid a page refresh. The code first checks if the wishlist form is present on the page, gets the URL for adding the item to the wishlist, and then attaches a submit event listener to the form. When the form is submitted, an AJAX request is sent to the server with the CSRF token in the header for security, and the response is handled to update the button appearance and show a success or error message.

--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -44,12 +44,13 @@
     </div>
     <!-- Add to Wishlist-->
     {% if user.is_authenticated %}
+    <p id="wishlist-error-message" style="display: none;"></p>
     {% if product.id in wishlist_products %}
     <a class="btn btn-wishlist btn-shop-lg disabled" href="#" aria-label="Item is already in your Wishlist">
         <i class="fa-solid fa-heart fa-lg"></i>
     </a>
     {% else %}
-    <form method="post" action="{% url 'add_to_wishlist' product.id %}">
+    <form id="add-to-wishlist-form" data-url="{% url 'add_to_wishlist' product.id %}">
         {% csrf_token %}
         <button class="btn btn-wishlist btn-shop-lg" type="submit" aria-label="Add to Wishlist">
             <i class="fa-regular fa-heart fa-lg"></i>
